--- a/views/admin/billing/invoices.ejs
+++ b/views/admin/billing/invoices.ejs
@@ -60,8 +60,8 @@
                         </li>
                     </ul>
 
-                    <div
-                        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 mobile-header-visible"
+                        style="border-bottom: 1px solid #dee2e6;">
                         <h1 class="h2">
                             <i class="bx bx-receipt"></i> Kelola Tagihan
                         </h1>
