--- a/views/admin/billing/customers.ejs
+++ b/views/admin/billing/customers.ejs
@@ -792,7 +792,7 @@
 
     <!-- Add Customer Modal -->
     <div class="modal fade" id="addCustomerModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Tambah Pelanggan</h5>
@@ -1081,7 +1081,7 @@
 
     <!-- Edit Customer Modal -->
     <div class="modal fade" id="editCustomerModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Edit Pelanggan</h5>
@@ -1357,7 +1357,7 @@
 
     <!-- Import Customers Modal -->
     <div class="modal fade" id="importCustomersModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Restore Data Pelanggan (Import)</h5>
