--- a/views/admin/billing/packages.ejs
+++ b/views/admin/billing/packages.ejs
@@ -167,7 +167,7 @@
 
     <!-- Add Package Modal -->
     <div class="modal fade" id="addPackageModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Tambah Paket Baru</h5>
@@ -247,7 +247,7 @@
 
     <!-- Edit Package Modal -->
     <div class="modal fade" id="editPackageModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Edit Paket</h5>
@@ -328,7 +328,7 @@
 
     <!-- View Package Modal -->
     <div class="modal fade" id="viewPackageModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Detail Paket</h5>
