--- a/views/admin/billing/payment-settings.ejs
+++ b/views/admin/billing/payment-settings.ejs
@@ -528,7 +528,7 @@
     </script>
 
     <!-- Mobile Bottom Navbar -->
-    <%- include('../../partials/admin-mobile-navbar', { currentPage: 'payments' }) %>
+    <%- include('../../partials/admin-mobile-navbar', { currentPage: 'settings' }) %>
 </body>
 
 </html>
