--- a/views/admin/billing/invoices.ejs
+++ b/views/admin/billing/invoices.ejs
@@ -195,7 +195,7 @@
 
     <!-- Add Invoice Modal -->
     <div class="modal fade" id="addInvoiceModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Buat Tagihan Baru</h5>
