--- a/views/admin/billing/whatsapp-settings.ejs
+++ b/views/admin/billing/whatsapp-settings.ejs
@@ -1748,7 +1748,7 @@
     </script>
 
     <!-- Mobile Bottom Navbar -->
-    <%- include('../../partials/admin-mobile-navbar', { currentPage: 'payments' }) %>
+    <%- include('../../partials/admin-mobile-navbar', { currentPage: 'settings' }) %>
 </body>
 
 </html>
