--- a/views/admin/billing/invoice-detail.ejs
+++ b/views/admin/billing/invoice-detail.ejs
@@ -11,6 +11,8 @@
     <link href="/css/theme.css?v=1" rel="stylesheet">
     <!-- Admin Mobile Optimizations -->
     <link href="/css/admin-mobile.css" rel="stylesheet">
+    <link href="/css/mobile-sidebar.css" rel="stylesheet">
+    <link href="/css/responsive-admin.css" rel="stylesheet">
 </head>
 
 <body>
