--- a/views/admin/billing/settings.ejs
+++ b/views/admin/billing/settings.ejs
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="/css/admin-mobile-billing.css">
     <!-- Admin Mobile Optimizations -->
     <link href="/css/admin-mobile.css" rel="stylesheet">
+    <link href="/css/mobile-sidebar.css" rel="stylesheet">
+    <link href="/css/responsive-admin.css" rel="stylesheet">
     <style>
         :root {
             --primary-color: #4361ee;
